[gd_scene load_steps=13 format=2]

[ext_resource path="res://Chort.gd" type="Script" id=1]
[ext_resource path="res://assets/0x72_DungeonTilesetII_v1.3/0x72_DungeonTilesetII_v1.3/frames/chort_idle_anim_f0.png" type="Texture" id=2]
[ext_resource path="res://assets/0x72_DungeonTilesetII_v1.3/0x72_DungeonTilesetII_v1.3/frames/chort_idle_anim_f1.png" type="Texture" id=3]
[ext_resource path="res://assets/0x72_DungeonTilesetII_v1.3/0x72_DungeonTilesetII_v1.3/frames/chort_idle_anim_f2.png" type="Texture" id=4]
[ext_resource path="res://assets/0x72_DungeonTilesetII_v1.3/0x72_DungeonTilesetII_v1.3/frames/chort_idle_anim_f3.png" type="Texture" id=5]
[ext_resource path="res://assets/0x72_DungeonTilesetII_v1.3/0x72_DungeonTilesetII_v1.3/frames/chort_run_anim_f0.png" type="Texture" id=6]
[ext_resource path="res://assets/0x72_DungeonTilesetII_v1.3/0x72_DungeonTilesetII_v1.3/frames/chort_run_anim_f1.png" type="Texture" id=7]
[ext_resource path="res://assets/0x72_DungeonTilesetII_v1.3/0x72_DungeonTilesetII_v1.3/frames/chort_run_anim_f2.png" type="Texture" id=8]
[ext_resource path="res://assets/0x72_DungeonTilesetII_v1.3/0x72_DungeonTilesetII_v1.3/frames/chort_run_anim_f3.png" type="Texture" id=9]
[ext_resource path="res://Sense.gd" type="Script" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 2.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "run",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 78.4766

[node name="Chort" type="Node2D"]
scale = Vector2( 1.3, 1.3 )
script = ExtResource( 1 )
SENSE_RADIUS = 50
scenes = [ ExtResource( 1 ) ]

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "run"

[node name="Sense" type="Area2D" parent="."]
script = ExtResource( 10 )

[node name="SenseRadius" type="CollisionShape2D" parent="Sense"]
shape = SubResource( 2 )
[connection signal="body_entered" from="Sense" to="." method="_on_Sense_body_entered"]
[connection signal="body_exited" from="Sense" to="." method="_on_Sense_body_exited"]
